--- a/src/portafolio.css
+++ b/src/portafolio.css
@@ -8,6 +8,7 @@
 /* Variables */
 :root{
     --bg-primario: #06A8D1;
+    --bg-primario-hover: #0A7E9F;
     --bg-secundario: #2F2D2E;
     --text-primario: #fff;
     --text-secundario: #000;
@@ -51,12 +52,20 @@ section{
 .container{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 7%;
+}
+
+.section__title{
+    font-size: 5rem;
+    margin-bottom: 2rem;
 }
 
 @media (max-width: 768px){
     html{
         font-size: 50%;
+    }
+    .container{
+        padding: 0 5%;
     }
 }
 
@@ -64,10 +73,16 @@ section{
     html{
         font-size: 40%;
     }
+    .container{
+        padding: 0 3%;
+    }
 }
 
 @media (max-width: 320px){
     html{
         font-size: 30%;
+    }
+    .container{
+        padding: 0 2%;
     }
 }
