--- a/src/components/proyectos/proyectos.css
+++ b/src/components/proyectos/proyectos.css
@@ -1,5 +1,5 @@
 .proyectos{
-    padding: 50px 0;
+    padding: 6.5rem 0;
     text-align: center;
 }
 
@@ -62,13 +62,14 @@
     padding: 10px 20px;
     background: var(--bg-primario);
     border-radius: 5px;
+    transition: background 0.3s ease;
 }
 
 .proyectos__info a i{
     font-size: 2rem;
 }
 
-.proyectos__link:hover{
+.proyectos__links a:hover{
     background: var(--bg-primario-hover);
 }
 
@@ -81,4 +82,27 @@
     width: 100%;
     object-position: top;
     object-fit: cover;
+}
+
+
+/* filtrado de proyectos */
+.proyecto__filter{
+    display: flex;
+    justify-content: center;
+}
+
+.proyecto__filter-btn{
+    padding: 10px 20px;
+    background: var(--bg-primario);
+    border-radius: 5px;
+    transition: background 0.3s ease;
+    margin: 0 10px;
+    font-size: 2rem;
+    color: var(--text-primario);
+}
+
+.active{
+    background: var(--bg-primario-hover);
+    transform: scale(1.1);
+    color: red;
 }
