--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@
     border-bottom: 1px solid var(--bg-primario);
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     background: var(--bg-secundario);
+    z-index: 100;
 }
 
 .nav{
