--- a/src/components/inicio/inicio.css
+++ b/src/components/inicio/inicio.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 5rem;
 }
 
 .section__hero-img{
