--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,21 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
+  /* html {
+    @apply scroll-smooth;
+  } */
   body {
-    @apply bg-body text-white;
+    @apply bg-body text-white min-h-screen;
   }
   section {
-    @apply flex-1 container mx-auto px-1 md:p-3;
+    @apply container mx-auto py-40 pb-32 min-h-screen;
   }
-
-}
-
-.active {
-  @apply bg-primary;
-}
-
-.menuTransition {
-  transition: transform 0.5s ease-in-out;
 }
