--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,4 +12,10 @@
   section {
     @apply container mx-auto px-2 min-h-screen scroll-mt-24 w-full;
   }
+  input {
+    @apply p-4 text-lg outline-none bg-nav rounded w-full;
+  }
+  .btn {
+    @apply bg-primary rounded-sm text-lg px-3 py-1 w-32 overflow-hidden block hover:bg-primaryHover transition-all duration-300;
+  }
 }
